add very simple Monte Carlo Simulation

--- a/betting-analysis.ipynb
+++ b/betting-analysis.ipynb
@@ -7,7 +7,7 @@
     "Total_Turnover: 3422065.0586887286  \n",
     "Total_PnL: 147777.01029799972  \n",
     "Total_Commission: 123075.89073176196  \n",
-    "Total_Net_PnL: 24701.119566237743"
+    "Total_Net_PnL: 24701.119566237743  "
    ]
   },
   {
@@ -1567,6 +1567,95 @@
     "print(f'Total_PnL: {Total_PnL}')\n",
     "print(f'Total_Commission: {Total_Commission}')\n",
     "print(f'Total_Net_PnL: {Total_Net_PnL}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Running a Monte Carlo simulation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is a very simplistic way of running a Monte Carlo simulation. I understand the idea is that you want to generate some random probability of winning and check how that impacts our PnL. What I have tried to do is:\n",
+    "- generate a random number between 0 and 1 for each bet\n",
+    "- if random number associated with each bet is less than the expected win probability, we have a winner  odds – 1. If it’s not, we assign a loss of -1.\n",
+    "determine whether each bet wins or loses in our simulation, we simply ask Excel whether the "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Net_PnL_1': -7192.797015058297, 'Net_PnL_2': 24680.306875665974, 'Net_PnL_3': -1689.9218590893488, 'Net_PnL_4': -64458.79624991768, 'Net_PnL_5': 33121.80273947963, 'Net_PnL_6': 5298.878410693299, 'Net_PnL_7': 14785.727304242962, 'Net_PnL_8': 63862.10438124588, 'Net_PnL_9': 47641.453207229206, 'Net_PnL_10': -29043.155108646904}\n"
+     ]
+    }
+   ],
+   "source": [
+    "randomly_generated_results = {}\n",
+    "for i in range(10):\n",
+    "    df = pd.read_csv('horses.csv')\n",
+    "    random_numbers = [] \n",
+    "    for price in df[\"win_fair_price\"]:\n",
+    "          random_numbers.append(random.uniform(0, 1)) \n",
+    "    df[\"random_prob_winning\"] = random_numbers\n",
+    "    df[\"estimated_prob_winning\"] = estimated_prob_winning\n",
+    "\n",
+    "    # start the process again\n",
+    "    df[\"overlay\"] = (estimated_prob_winning * odds) - 1\n",
+    "    df.loc[df[\"overlay\"] < 0, \"kelly\"] = 10000 * ((df[\"overlay\"] * (-1)) / (odds - 1))\n",
+    "    df.loc[df[\"overlay\"] > 0, \"kelly\"] = 10000 * (df[\"overlay\"] / (odds - 1))\n",
+    "    df.loc[df[\"kelly\"] > 2, \"turnover\"] = df[\"kelly\"]\n",
+    "    df.loc[df[\"kelly\"] < 2, \"turnover\"] = 0\n",
+    "    \n",
+    "    df[\"side\"] = [\"lay\" if x < 0 else \"back\" for x in df[\"overlay\"]]\n",
+    "    back_bets = df[\"side\"] == \"back\"\n",
+    "    lay_bets = df[\"side\"] == \"lay\"\n",
+    "    \n",
+    "#     df.loc[back_bets & (estimated_prob_winning > df[\"random_prob_winning\"]), \"winner\"] = 1\n",
+    "#     df.loc[back_bets & (estimated_prob_winning < df[\"random_prob_winning\"]), \"winner\"] = 0\n",
+    "#     df.loc[lay_bets & (estimated_prob_winning < df[\"random_prob_winning\"]), \"winner\"] = 1 \n",
+    "#     df.loc[lay_bets & (estimated_prob_winning > df[\"random_prob_winning\"]), \"winner\"] = 0 \n",
+    "    \n",
+    "    df.loc[estimated_prob_winning > df[\"random_prob_winning\"], \"winner\"] = 1\n",
+    "    df.loc[estimated_prob_winning < df[\"random_prob_winning\"], \"winner\"] = 0\n",
+    "    \n",
+    "    back_winners = (df[\"winner\"] == 1) & (df[\"side\"] == \"back\")\n",
+    "    back_losers = (df[\"winner\"] == 0) & (df[\"side\"] == \"back\")\n",
+    "    lay_winners = (df[\"winner\"] == 0) & (df[\"side\"] == \"lay\")\n",
+    "    lay_losers = (df[\"winner\"] == 1) & (df[\"side\"] == \"lay\")\n",
+    "    \n",
+    "    df.loc[back_bets, \"EV\"] = (estimated_prob_winning * ((odds - 1) * df[\"kelly\"])) - ((1 - estimated_prob_winning) * df[\"kelly\"])\n",
+    "    df.loc[lay_bets, \"EV\"] = ((1 - estimated_prob_winning) * df[\"kelly\"]) - (estimated_prob_winning * ((odds - 1) * df[\"kelly\"]))\n",
+    "\n",
+    "    df.loc[back_winners, \"PnL\"] = df[\"turnover\"] * ( odds - 1 ) \n",
+    "    df.loc[back_losers, \"PnL\"] = -df[\"turnover\"]\n",
+    "    df.loc[lay_winners, \"PnL\"] = df[\"turnover\"]\n",
+    "    df.loc[lay_losers, \"PnL\"] = -df[\"turnover\"] * ( odds - 1 ) \n",
+    "    df[\"commission\"] = [x * 0.05 if x > 0 else 0 for x in df[\"PnL\"]]\n",
+    "    df[\"Net PnL\"] = df[\"PnL\"] - df[\"commission\"]\n",
+    "    df.loc[df[\"turnover\"] == 0, \"RoI\"] = 0\n",
+    "    df.loc[df[\"turnover\"] != 0, \"RoI\"] = df[\"Net PnL\"] / df[\"turnover\"]\n",
+    "    randomly_generated_results[f'Net_PnL_{i+1}'] = df[\"Net PnL\"].sum()\n",
+    "\n",
+    "print(randomly_generated_results)\n"
    ]
   }
  ],
